part2/logoutput/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: logoutput
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes: # Define volume
        - name: shared-image
          emptyDir: {}
      containers:
        - name: logoutputwriter
          image: tonip57/logoutputwriter
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /usr/src/app/files
        - name: logoutputreader
          image: tonip57/logoutputreader
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /usr/src/app/files
