part2/logoutput/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: logoutput
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - name: http
      port: 2345
      protocol: TCP
      targetPort: 3301
